--- a/BetterTargetingSystemPvP/BetterTargetingSystemPvP.csproj
+++ b/BetterTargetingSystemPvP/BetterTargetingSystemPvP.csproj
@@ -22,4 +22,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+  </ItemGroup>
+
 </Project>
